[project]
name = "conservation-ecology-ml"
version = "0.1.0"
description = "Predicting Missing Plant–Pollinator Interactions with Machine Learning"
readme = "README.md"
requires-python = "==3.10.13"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "networkx>=3.0",
    "shap>=0.42.0",
    "xgboost>=1.7.0",
    "imbalanced-learn>=0.10.0",
]


[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "ipdb>=0.13.13",
    "ipykernel>=6.29.5",
    "isort>=6.0.1",
    "jupyterlab>=4.4.0",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.2",
    "pytest>=8.3.5",
]

[tool.isort]
profile = "black"
skip = [".venv", "data", ".vscode", ".github"]
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
