[project]
name = "conservation-ecology-ml"
version = "0.1.0"
description = "Machine learning for predicting missing plant-pollinator interactions"
requires-python = ">=3.10.13"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "xgboost>=1.7.0",
    "shap>=0.42.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "networkx>=3.1",
    "plotly>=5.15.0",
    "joblib>=1.3.0",
    "pyreadr>=0.5.3",
    # GNN and Deep Learning dependencies
    "torch>=2.0.0",
    "torch-geometric>=2.3.0",
    "torch-scatter>=2.1.0",
    "torch-sparse>=0.6.0",
    "torch-cluster>=1.6.0",
    "torch-spline-conv>=1.2.0",
    # Additional ML dependencies
    "imbalanced-learn>=0.10.0",
    "optuna>=3.2.0",
    "wandb>=0.15.0",
    # Graph analysis
    "igraph>=0.10.0",
    "python-igraph>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
skip = [".venv", "data", ".vscode", ".github"]
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
